# Routes/report.js
@@ -6,7 +6,7 @@ const multer = require('multer');
 const router = express.Router();
 
 const{authenticateToken} = require("../cipher/jwtToken")
-const{getRepot, getDetailRepot, getRejectionReport, getNPCIStatusReport, getRejData } = require("../Controllers/reportController")
+const{getRepot, getDetailRepot, getRejectionReport, getRetRejectionReport, getNPCIStatusReport, getRejData } = require("../Controllers/reportController")
 const upload = multer();
 
 
@@ -15,7 +15,8 @@ router.post("/getReport", authenticateToken, getRepot);
 
 router.post("/getDetailReport", authenticateToken, getDetailRepot);
 
-router.post("/getRejectionReport",authenticateToken, getRejectionReport);
+router.post("/getRejectionReport", authenticateToken, getRejectionReport);
+router.post("/getRetRejectionReport", authenticateToken, getRetRejectionReport);
 
 router.post("/getNPCIStatusReport", authenticateToken, getNPCIStatusReport);
 
